--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,7 @@ websockets==11.0.3
 redis==5.0.1
 pydantic==2.10.6
 pydantic-settings==2.8.1
-aiohttp==3.11.13 
+aiohttp==3.11.13
+httpx==0.27.0
+pytest==8.3.5
+pytest-cov==6.0.0 
